update README with repo overview and week 03
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018cWoAFmeUYcBYEECckq2Kp